public/css/style.css
/* ... */
@media screen and (max-width: 1200px) {
  .mil-menu-btn {
    display: flex;
  }
}
.mil-menu-btn span, .mil-menu-btn span:after, .mil-menu-btn span:before {
  content: "";
  display: block;
  width: 24px;
  height: 2px;
  background:#2B3990;
  backface-visibility: hidden;
  transition: inherit;
}
.mil-menu-btn span {
  position: relative;
}
.mil-menu-btn span:after, .mil-menu-btn span:before {
  position: absolute;
}
.mil-menu-btn span:before {
  top: -8px;
}
.mil-menu-btn span:after {
  top: 8px;
}
.mil-menu-btn.mil-active span {
  transform: rotate(45deg);
}
.mil-menu-btn.mil-active span:before {
  transform: translate(0px, 8px) rotate(-90deg);
}
.mil-menu-btn.mil-active span:after {
  width: 24px;
  transform: translate(0px, -8px) rotate(-90deg);
}

.mil-dark-1 .mil-menu-btn {
  background-color:#2B3990;
}
.mil-dark-1 .mil-menu-btn span, .mil-dark-1 .mil-menu-btn span:after, .mil-dark-1 .mil-menu-btn span:before {
  background-color: rgb(242, 250, 250);
}

.mil-dark-2 .mil-menu-btn {
  background-color: rgb(27, 23, 23);
}
.mil-dark-2 .mil-menu-btn span, .mil-dark-2 .mil-menu-btn span:after, .mil-dark-2 .mil-menu-btn span:before {
  background-color: rgb(242, 250, 250);
}

/* -------------------------------------------

banner

------------------------------------------- */
.mil-banner {
  position: relative;
  overflow: hidden;
  background-color: rgb(242, 250, 250);
  height: 100vh;
  min-height:720px;
  display: flex;
  align-items: center;
  padding-top: 40px;
}
.mil-banner .mil-banner-img img {
  float:left;
}
.mil-banner .mil-banner-img.mil-banner-img-out img {
  transform: translateX(-80px);
  width: 190%;
  float: left;
}
@media screen and (max-width: 1200px) {
  .mil-banner {
    height: auto;
    margin-top: 80px;
    padding: 80px 0;
    padding-bottom: 0;
  }
  .mil-banner .container {
    margin-top: 0;
  }
  .mil-banner .mil-banner-text {
    text-align: center;
  }
  .mil-banner .mil-banner-img img {
    width: 100% !important;
    transform: none !important;
  }
  .mil-banner .mil-banner-img.mil-120 img {
    width: 120% !important;
  }
  .mil-banner .mil-banner-img.mil-banner-img-out img {
    transform: none;
    width: 110% !important;
    float: left;
  }
}
.mil-banner.mil-banner-inner {
  height: auto;
  background-color: transparent;
  min-height: 680px;
  padding-top: 80px;
  margin-top: 0;
}
.mil-banner.banner-short {
  padding-bottom: 80px;
  height: 60vh;
  align-items: flex-end;
}
.mil-banner.mil-dark-1 {
  background: linear-gradient(90deg, #1B1D1D 0%, #0D5152 50%, #1B1D1D 100%);
}
.mil-banner.mil-dark-2 {
  background-color: #1B1717;
  background: linear-gradient(90deg, #1B1717 0%, rgba(242, 116, 87, 0.4) 50%, #1B1717 100%);
}

.mil-radial-g-1 {
  background-color:#2B3990;
  opacity: 0.6;
  position: absolute;
  width: 100vw;
  height: 100vw;
  top: -170%;
  left: 0;
  border-radius: 50%;
  filter: blur(200px);
}

.mil-radial-g-2 {
  background-color:#F15A29;
  opacity: 0.6;
  position: absolute;
  width: 100vw;
  height: 100vw;
  top: -170%;
  left: 0;
  border-radius: 50%;
  filter: blur(200px);
}

.mil-radial-g-3 {
  background-color: #FDE400;
  opacity: 1;
  position: absolute;
  width: 60vw;
  height: 300px;
  bottom: -200px;
  right: 0;
  border-radius: 500px 0 0 0;
  filter: blur(200px);
}

/* -------------------------------------------

content list

------------------------------------------- */
.mil-banner-list {
  display: flex;
}
.mil-banner-list li {
  display: flex;
  align-items: center;
  position: relative;
  list-style-type: none;
  margin-bottom: 30px;
  margin-right: 30px;
  color: rgb(160, 205, 205);
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-banner-list li:last-child {
  margin-right: 0;
}
.mil-banner-list li:before {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f00c";
  margin-right: 15px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  border: solid 2px rgb(160, 205, 205);
  color: rgb(160, 205, 205);
  width: 36px;
  height: 36px;
  border-radius: 50%;
}
.mil-banner-list.mil-type-2 li {
  color:#2B3990;
}
.mil-banner-list.mil-type-2 li:before {
  border: solid 2px #2B3990;
  color:#2B3990;
}

.mil-list-1 li {
  position: relative;
  padding-left: 45px;
  list-style-type: none;
  margin-bottom: 30px;
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
@media screen and (max-width: 992px) {
  .mil-list-1 li {
    opacity: 1;
  }
}
.mil-list-1 li:before {
  content: "";
  display: block;
  width: 1px;
  height: calc(100% + 30px);
  background-color: rgb(242, 250, 250);
  position: absolute;
  top: 0;
  left: 14px;
}
.mil-list-1 li:after {
  content: "";
  display: block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  box-shadow: 0 0 0 8px rgb(242, 250, 250);
  background-color:#2B3990;
  position: absolute;
  top: 6px;
  left: 8px;
}
.mil-list-1 li:last-child {
  margin-bottom: 0;
}
.mil-list-1 li:last-child:before {
  display: none;
}
.mil-list-1.mil-accent li:after {
  background-color:#F15A29;
}

.mil-list-2 li {
  position: relative;
  padding-left: 56px;
  list-style-type: none;
  margin-bottom: 30px;
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-list-2 li:after {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f00c";
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  color: #2B3990;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  background-color: rgb(242, 250, 250);
  position: absolute;
  top: -4px;
  left: 0;
}
.mil-list-2 li:last-child {
  margin-bottom: 0;
}
.mil-list-2.mil-type-2 li:after {
  background-color:#2B3990;
  color: rgb(255, 255, 255);
}
.mil-list-2.mil-type-3 li:after {
  background-color:#2B3990;
  color:#2B3990;
}
.mil-list-2.mil-accent li:after {
  background-color:#F15A29;
}
/* ... */

